# oop_idz_variant10

./: CMakeLists.txt  main.cpp
include/: DiagramClassItem.hpp  DiagramField.hpp  pch.hpp
